<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrepCarApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_navigate_screen">NavigateScreenActivity</string>

    <!-- text -->
    <string name="app_id">165616260590111</string>
    <string name="buyer">Buyer</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="dealer">Dealer</string>
    <string name="title_activity_slider">SliderActivity</string>
    <string name="start">Start</string>
    <string name="email">Email</string>
    <string name="dealercode">Dealership code</string>
    <string name="password">Password</string>
    <string name="forgotpasword">Forgot your password?</string>
    <string name="forgotpasword1">Forgot password</string>
    <string name="notauser">Not a registered user yet? </string>
    <string name="signupnow">No account yet?\nSign-up for FREE and let\'s find you a nice car!</string>
    <string name="signupnowdealer">No account yet?\nSign-up for FREE and start matching people with cars!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="confirmpass">Confirm password</string>
    <string name="zipcode">Zip code</string>
    <string name="dealership">Dealer Name</string>
    <string name="dealership_code">Dealership Code</string>
    <string name="discovery">Discovery</string>
    <string name="whatkinddriver">What kind of driver are you?</string>
    <string name="finance">Finances</string>
    <string name="howmuch">How much are you trying to spend?</string>
    <string name="curentcar">Current Car</string>
    <string name="whatsyour">Do you have a trade-in?</string>
    <string name="newcar">New Car</string>
    <string name="described">Describe your next car</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="changepass">Password</string>
    <string name="editprofile">Profile</string>

    <string name="newmaches">New Matches</string>
    <string name="favoritos">Favorites</string>
    <string name="feed">Feed</string>

    <string name="carlist">Cars List</string>
    <string name="buyerlist">ACTIVE LEADS</string>
    <string name="newpass">NEW PASSWORD</string>
    <string name="connewpass">CONFIRM NEW PASSWORD</string>
    <string name="oldpass">OLD PASSWORD</string>
    <string name="frstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="stretadres">Street Address</string>
    <string name="update">Update</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="identify">ARE YOU?</string>
    <string name="no">NO</string>
    <string name="other">OTHERS</string>
    <string name="height">HEIGHT</string>
    <string name="savedisco">SAVE AND GO TO FINANCE</string>
    <string name="discount">DISCOUNTS</string>
    <string name="shopingnote">What\'s your goal?</string>
    <string name="smalchildren">SMALL CHILDREN?</string>
    <string name="mainuses">Main Uses?</string>
    <string name="isthis">IS THIS YOUR FIRST CAR?</string>
    <string name="small">4\'10\" - 5\'3\"</string>
    <string name="medium">5\'4\" - 5\'10\"</string>
    <string name="large">5\'11\" - 7\'+</string>
    <string name="title_activity_finances">FinancesActivity</string>
    <string name="estincome">EST MONTHLY INCOME</string>
    <string name="rent">RENT?</string>
    <string name="doyouneed">Do you need financing?</string>
    <string name="mortgagae">MORTGAGE?</string>
    <string name="amount">AMOUNT</string>
    <string name="studentloans">STUDENT LOANS?</string>
    <string name="estcredit">EST CREDIT SCORE</string>
    <string name="sugmonpay">SUGGESTED MONTHLY PAYMENT</string>
    <string name="choseyoyrown">CHOOSE YOUR OWN</string>
    <string name="budget">BUDGET</string>
    <string name="downpayment">DOWN PAYMENT</string>
    <string name="dateofbirth">DATE OF BIRTH</string>
    <string name="savefinance">SAVE AND GO TO CURRENT CAR</string>
    <string name="title_activity_current_car">CurrentCarActivity</string>
    <string name="stillowed">STILL OWED</string>
    <string name="milage">MILEAGE(BEST GUESS) </string>
    <string name="condition">CONDITION </string>
    <string name="kbbestvalue">Details</string>
    <string name="uploadcarphoto">UPLOAD CAR PHOTOS </string>
    <string name="browse">UPLOAD</string>
    <string name="savecurentcar">SAVE AND GO TO NEW CAR </string>
    <string name="iknow">I KNOW WHAT I WANT</string>
    <string name="iam">I AM HESITANT</string>
    <string name="iamlooking">I AM LOOKING FOR SPECIFIC MODELS</string>
    <string name="idelcar1">IDEAL CAR</string>
    <string name="idelcar2">IDEAL CAR 2</string>
    <string name="comment">Tell us what matters to you </string>
    <string name="addmore">ADD MORE </string>
    <string name="add">ADD</string>
    <string name="removeItem">REMOVE </string>
    <string name="addnew">ADD NEW </string>
    <string name="upload">UPLOAD</string>
    <string name="carsearch">LYFT/UBER DRIVER CAR SEARCH</string>
    <string name="savenewcar">DONE</string>
    <string name="yearrange">YEAR RANGE </string>
    <string name="type">TYPE </string>
    <string name="style">STYLES </string>
    <string name="milagesmall">MILEAGE </string>
    <string name="exteriorcolur">EXTERIOR COLOUR</string>
    <string name="transmission">TRANSMISSION </string>
    <string name="enginepower">ENGINE POWER </string>
    <string name="prefrence">AMENITIES </string>
    <string name="brands">BRANDS </string>
    <string name="americns">AMERICAN CARS </string>
    <string name="asians">ASIAN CARS </string>
    <string name="europians">EUROPEAN CARS </string>
    <string name="saveiam">FINISH </string>
    <string name="newiam">New </string>
    <string name="certified">Certified </string>
    <string name="preowned">Pre-owned </string>
    <string name="lease">Lease </string>
    <string name="anythingrelible">Anything reliable</string>
    <string name="economy">Economy</string>
    <string name="suv">SUV </string>
    <string name="sedan">Sedan </string>
    <string name="convertible">Convertible </string>
    <string name="coupe">Coupe </string>
    <string name="luxery">Luxury </string>
    <string name="rdrowseat">3rd row seats </string>
    <string name="hatchback">Hatchback </string>
    <string name="speed">Speed </string>
    <string name="van">Van </string>
    <string name="hdtruck">HD truck </string>
    <string name="electric">Electric </string>
    <string name="hybrid">Hybrid </string>
    <string name="selfdriving">Self driving</string>
    <string name="under10k">Under 10k </string>
    <string name="under30k">Under 30k </string>
    <string name="under50k">Under 50k </string>
    <string name="under70k">Under 70k </string>
    <string name="under100k">Under 100k </string>
    <string name="title_activity_new_car">NewCarActivity</string>
    <string name="manual">MANUAL</string>
    <string name="automatic">AUTOMATIC </string>
    <string name="exteriorcolor">EXTERIOR COLOR </string>
    <string name="stocknumber">STOCK NUMBER </string>
    <string name="share">SHARE</string>
    <string name="testdrive">TEST DRIVE</string>
    <string name="sendsimilar">SEND SIMILAR</string>
    <string name="contact">CONTACT</string>
    <string name="max_select_prompt">Select the maximum selection</string>
    <string name="media_type_prompt">Select the media type filter</string>

    <string name="confirmyourlocation">Now that you are done prepping your Carplan,\nLet\'s confirm your location:</string>
    <string name="finddealer">How far away should we look?(in miles)</string>
    <string name="finddealer1">Complete now for experts to begin the hunt!</string>
    <string name="welocated">We prepped</string>
    <string name="dealerships">dealerships!</string>
    <string name="features">Features</string>
    <string name="message">Message</string>
    <string name="done">DONE</string>
    <string name="name">Name</string>
</resources>