<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context="com.dev.prepcarapplication.LoginActivity" >

    <LinearLayout
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="fonts/Helvetica-Bold.otf"
        android:text="@string/forgotpasword1"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:fontFamily="fonts/Helvetica-Bold.otf"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="13sp" />

        <Button
            android:id="@+id/forgot_loginbuton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/get_started"
            android:fontFamily="fonts/Helvetica-Bold.otf"
            android:text="@string/submit"
            android:textColor="#00116F" />
    </LinearLayout>

</RelativeLayout>